Fix choose visible layers not toggling propery

--- a/app/geoblog/core/Core.css
+++ b/app/geoblog/core/Core.css
@@ -93,7 +93,7 @@ html, body, #application-window{
 }
 
 .legend:first-child{
-	display: none;
+	display: block;
 }
 
 .legend.active{
